@@ -1,3 +1,8 @@
+2008-05-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>
+
+	* src/igraph.h (igraph_shortest_paths_bellman_ford) :
+	added missing header
+
 2008-05-25  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/fast_community.c (igraph_community_fastgreedy) :
